# geom2d

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  circle.cpp  circle.h  core.cpp  core.h  geom2d.cpp  geom2d.h  util.cpp  util.h
tests/: CMakeLists.txt  circles_intersection.cpp  core_point_distance.cpp  distance.cpp  util_equal.cpp
